[package]
name = "finmind"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"

[dev-dependencies]
tokio-test = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
