[package]
name = "finmind"
version = "0.1.3"
authors = ["tommady <tommady@users.noreply.github.com>"]
description = "a rust library of https://finmindtrade.com/analysis/#/data/document"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/tommady/finmind-rs"
repository = "https://github.com/tommady/finmind-rs"
keywords = ["finmind", "stock"]
categories = ["web-programming::http-client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.0"

[dev-dependencies]
tokio-test = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
